openshift/deploymentConfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: cyborg-regidores
    component: webhook2kafka
  name: webhook2kafka
spec:
  replicas: 1
  revisionHistoryLimit: 4
  selector:
    app: cyborg-regidores
    component: webhook2kafka
    deploymentconfig: webhook2kafka
  template:
    metadata:
      labels:
        app: cyborg-regidores
        component: webhook2kafka
        deploymentconfig: webhook2kafka
    spec:
      containers:
        - image: webhook2kafka
          imagePullPolicy: Always
          name: webhook2kafka
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 128Mi
          volumeMounts:
            - mountPath: /opt/app-root/src/conf
              name: root-ca-cert
              readOnly: true
      volumes:
        - name: root-ca-cert
          secret:
            defaultMode: 420
            items:
              - key: root-ca-cert
                path: ca.pem
            secretName: cyborg-regidores
  test: false
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - webhook2kafka
        from:
          kind: ImageStreamTag
          name: webhook2kafka:latest
